# asr-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
asrfs/common/: augment.py  ctc.py  data.py  full_data.py
asrfs/parakeet/: __init__.py  config.yaml  config_full.yaml  dataset.py  model.py  reload_check.py  smoke.py  train.py
asrfs/sensevoice/: __init__.py  config.yaml  config_full.yaml  dataset.py  model.py  train.py
asrfs/whisper/: __init__.py  batch_probe.py  config.yaml  config_full.yaml  dataset.py  model.py  reload_check.py  smoke.py  train.py  trainer.py
asrfs/x_asr/: __init__.py  config.yaml  config_full.yaml  dataset.py  model.py  train.py
asrfs/x_asr/_vendor/: VENDOR.md  decoder.py  icefall_compat.py  joiner.py  optim.py  scaling.py  subsampling.py  zipformer.py
common/: data.py  metrics.py
parakeet/: config.yaml  dataset.py  model.py  reload_check.py  smoke.py  train.py
scripts/: eval_full.py
tests/: conftest.py  test_augment.py  test_config_full.py  test_contract_surface.py  test_ctc_common.py  test_data_dir.py  test_full_data.py  test_manifest_loader.py  test_metrics.py  test_model.py  test_packaging.py  test_parakeet_adapter.py  test_parakeet_dataset.py  test_parakeet_model.py  test_sensevoice_adapter.py  test_sensevoice_model.py  test_sensevoice_trainer.py  test_whisper_contract.py  test_whisper_dataset.py  test_whisper_trainer.py  test_xasr_adapter.py  test_xasr_bpe.py  test_xasr_model.py  test_xasr_trainer.py  test_xasr_vendor.py
whisper/: batch_probe.py  config.yaml  dataset.py  model.py  reload_check.py  smoke.py  train.py
(+3 files in other folders)
