[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-from-scratch"
version = "0.1.0"
description = "Four small ASR models trained from scratch on LibriSpeech with HF transformers"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["asrfs*"]
